--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,13 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# Terraform
+.terraform
+*.tfstate
+
+# Sonarqube
+.sonarqube
+
+# util
+scan.ps1
